--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^3.1.0",
+    "@netlify/plugin-nextjs": "^3.9.0",
     "@types/react": "^17.0.3",
-    "autoprefixer": "^10.2.5",
-    "dotenv": "^8.2.0",
-    "framer-motion": "^4.1.5",
-    "next": "10.1.3",
-    "next-connect": "^0.10.1",
-    "next-themes": "^0.0.14",
-    "pg": "^8.6.0",
-    "postcss": "^8.2.10",
+    "autoprefixer": "^10.3.3",
+    "dotenv": "^10.0.0",
+    "framer-motion": "^4.1.17",
+    "next": "^11.1.2",
+    "next-connect": "^0.10.2",
+    "next-themes": "^0.0.15",
+    "pg": "^8.7.1",
+    "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.4"
+    "tailwindcss": "^2.2.9",
+    "typeorm": "^0.2.37",
+    "typescript": "^4.4.2"
   }
 }
