--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "autoprefixer": "^10.3.3",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
-    "next": "^11.1.2",
+    "next": "^12.0.7",
     "next-connect": "^0.10.2",
     "next-themes": "^0.0.15",
     "pg": "^8.7.1",
     "postcss": "^8.3.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "tailwindcss": "^2.2.9",
     "typeorm": "^0.2.37",
